# arrowdb

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: batch.rs  parallel.rs  simple.rs
src/db/: hnsw.rs  layer.rs  mod.rs  order_id.rs  unique_id.rs
src/store/: fjall.rs  mod.rs
