[package]
name = "arrowdb"
version = "0.1.0"
edition = "2021"

[dependencies]
fjall = "2.5"
rand = "0.8.5"
anndists = { version = "0.1.2", features = ["simdeez_f"] }
scc = "2.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.94"
rustc-hash = "2.1"

[[example]]
name = "simple"
