[package]
name = "arrowdb"
version = "0.2.0"
edition = "2021"
description = "高性能本地向量数据库."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhuchuanjing/arrowdb"

[dependencies]
bytes = "1.10"
fjall = "2.5"
rand = "0.8.5"
anndists = { version = "0.1.2", features = ["simdeez_f"] }
scc = "2.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.94"
rustc-hash = "2.1"
rayon = "1.10"

[[example]]
name = "simple"
[[example]]
name = "parallel"
